Geometry Nodes: Point Instance Node crashing after deleting instancer from Collections #87666

Closed
opened 2021-04-20 21:37:29 +02:00 by Aleksandr · 10 comments

System Information
Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-19 20:39, hash: 0566ebdebe
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashing when I deleting instancer from collection.

Exact steps for others to reproduce the error
Open Geo_Crash.blend - select "Sphere" from "Instance" collection - delete Sphere.

Screencast-2021-04-20_22.28.22.mp4
Geo_Crash.blend
Geo_Crash.crash.txt

**System Information** Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.27 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-19 20:39, hash: `0566ebdebe` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashing when I deleting instancer from collection. **Exact steps for others to reproduce the error** Open Geo_Crash.blend - select "Sphere" from "Instance" collection - delete Sphere. [Screencast-2021-04-20_22.28.22.mp4](https://archive.blender.org/developer/F10030427/Screencast-2021-04-20_22.28.22.mp4) [Geo_Crash.blend](https://archive.blender.org/developer/F10030425/Geo_Crash.blend) [Geo_Crash.crash.txt](https://archive.blender.org/developer/F10030433/Geo_Crash.crash.txt)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena
Member

Added subscriber: @Calra

Added subscriber: @Calra
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the crash on Windows 10 3.0.0 Alpha.
The stack traces seem to be different. Here is from windows.

Geo_Crash.crash.txt

I can confirm the crash on Windows 10 3.0.0 Alpha. The stack traces seem to be different. Here is from windows. [Geo_Crash.crash.txt](https://archive.blender.org/developer/F10030469/Geo_Crash.crash.txt)
Member

Investigating further:
The issue seems to be deleting the object from Instance collection while Point Instance is still using it.

To reproduce the issue, some points:
In the Point Instance Node:
Note 1: It only happens when instance object is taken as Collection.
Note 2: Make sure in the Object section, the object-to-be-deleted (Sphere) is not selected.
Note 2: Make sure to uncheck the Whole Collection box otherwise it won't crash.

Here is a simplified blend file.
Steps (same as above): Delete the Sphere from Instance collection.
point_instance_collection_crash.blend
Edit: Updated bug file

Investigating further: The issue seems to be deleting the object from Instance collection while `Point Instance` is still using it. To reproduce the issue, some points: In the Point Instance Node: Note 1: It only happens when instance object is taken as Collection. Note 2: Make sure in the Object section, the object-to-be-deleted (Sphere) is not selected. Note 2: Make sure to uncheck the `Whole Collection` box otherwise it won't crash. Here is a simplified blend file. Steps (same as above): Delete the `Sphere` from Instance collection. [point_instance_collection_crash.blend](https://archive.blender.org/developer/F10032592/point_instance_collection_crash.blend) Edit: Updated bug file
Himanshi Kalra changed title from Geometry Nodes Crash after instancer deleting to Geometry Nodes: Point Instance Node crashing after deleting instancer from Collections 2021-04-20 22:21:10 +02:00
Member

Changing the Priority to high because of reproducible crash. Cannot yet comment on regressability.

Changing the Priority to high because of reproducible crash. Cannot yet comment on regressability.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm investigating this right now. The issue seems similar to the issue that moving objects out of a collection does not update geometry nodes or the boolean modifier.

I'm investigating this right now. The issue seems similar to the issue that moving objects out of a collection does not update geometry nodes or the boolean modifier.

This issue was referenced by b67fe05d4b

This issue was referenced by b67fe05d4bea2d3c9efbd127e9d9dc3a897e89e6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-04-26 16:36:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87666
No description provided.